# backend/src/api/types/authenticated-request.ts
@@ -1,0 +1,11 @@
+import { Request } from "express";
+import { UserRole } from "../../domain/entities/user/user.props";
+
+export interface AuthPayload {
+  userId: string;
+  role: UserRole;
+}
+
+export interface AuthenticatedRequest extends Request {
+  auth: AuthPayload;
+}
